# AI_chatbot_agent

./: .gitignore  README.md
backend/: main.py  pyproject.toml
backend/routes/: chat_router.py
backend/schemas/: schema.py
backend/scripts/: del.py  ingest_data.py
backend/services/: chaining_service.py  google_service.py  google_vectorise.py  ollama_service.py  openai_service.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: AiChatbot.module.css  AiChatbot.tsx
